# src/fields2cover-api/openapi_server/controllers/default_controller.py
@@ -6,7 +6,7 @@ from typing import Union
 from openapi_server.models.generate_path_post_request import GeneratePathPostRequest  # noqa: E501
 from openapi_server.models.path import Path  # noqa: E501
 from openapi_server import util
-from openapi_server.controllers.api import generate_path
+from openapi_server.controllers.path_service import generate_path
 
 def generate_path_post(generate_path_post_request):  # noqa: E501
     """Generate a path based on field data
@@ -24,7 +24,8 @@ def generate_path_post(generate_path_post_request):  # noqa: E501
     
     req: GeneratePathPostRequest = GeneratePathPostRequest.from_dict(connexion.request.get_json())  # noqa: E501
     
-    path = generate_path(req._field, req.working_lanes, req.transport_lanes, req.start_end_point, 2.0, 2.0, 3.14, 3.14, 2.0)
+    
+    path = generate_path(req.working_lanes, req.transport_lanes, req.start_end_point, req.robot_settings , req.sorter_settings, req.curves_algorithm)
     
     return path
 
