# src/fields2cover-api/openapi_server/models/__init__.py
@@ -2,5 +2,7 @@
 # import models into model package
 from openapi_server.models.generate_path_post_request import GeneratePathPostRequest
 from openapi_server.models.generate_path_post_request_settings import GeneratePathPostRequestSettings
+from openapi_server.models.generate_path_post_request_settings_sorter_settings import GeneratePathPostRequestSettingsSorterSettings
 from openapi_server.models.path import Path
 from openapi_server.models.point import Point
+from openapi_server.models.robot_settings import RobotSettings
