# src/fields2cover-api/openapi_server/models/generate_path_post_request_settings.py
@@ -3,8 +3,12 @@ from datetime import date, datetime  # noqa: F401
 from typing import List, Dict  # noqa: F401
 
 from openapi_server.models.base_model import Model
+from openapi_server.models.generate_path_post_request_settings_sorter_settings import GeneratePathPostRequestSettingsSorterSettings
+from openapi_server.models.robot_settings import RobotSettings
 from openapi_server import util
 
+from openapi_server.models.generate_path_post_request_settings_sorter_settings import GeneratePathPostRequestSettingsSorterSettings  # noqa: E501
+from openapi_server.models.robot_settings import RobotSettings  # noqa: E501
 
 class GeneratePathPostRequestSettings(Model):
     """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
@@ -12,36 +16,31 @@ class GeneratePathPostRequestSettings(Model):
     Do not edit the class manually.
     """
 
-    def __init__(self, robot_width=None, robot_length=None, headland_width=None, sorter_algorithm=None):  # noqa: E501
+    def __init__(self, robot_settings=None, sorter_settings=None, curves_algorithm=None):  # noqa: E501
         """GeneratePathPostRequestSettings - a model defined in OpenAPI
 
-        :param robot_width: The robot_width of this GeneratePathPostRequestSettings.  # noqa: E501
-        :type robot_width: float
-        :param robot_length: The robot_length of this GeneratePathPostRequestSettings.  # noqa: E501
-        :type robot_length: float
-        :param headland_width: The headland_width of this GeneratePathPostRequestSettings.  # noqa: E501
-        :type headland_width: float
-        :param sorter_algorithm: The sorter_algorithm of this GeneratePathPostRequestSettings.  # noqa: E501
-        :type sorter_algorithm: str
+        :param robot_settings: The robot_settings of this GeneratePathPostRequestSettings.  # noqa: E501
+        :type robot_settings: RobotSettings
+        :param sorter_settings: The sorter_settings of this GeneratePathPostRequestSettings.  # noqa: E501
+        :type sorter_settings: GeneratePathPostRequestSettingsSorterSettings
+        :param curves_algorithm: The curves_algorithm of this GeneratePathPostRequestSettings.  # noqa: E501
+        :type curves_algorithm: str
         """
         self.openapi_types = {
-            'robot_width': float,
-            'robot_length': float,
-            'headland_width': float,
-            'sorter_algorithm': str
+            'robot_settings': RobotSettings,
+            'sorter_settings': GeneratePathPostRequestSettingsSorterSettings,
+            'curves_algorithm': str
         }
 
         self.attribute_map = {
-            'robot_width': 'robotWidth',
-            'robot_length': 'robotLength',
-            'headland_width': 'headlandWidth',
-            'sorter_algorithm': 'sorterAlgorithm'
+            'robot_settings': 'robotSettings',
+            'sorter_settings': 'sorterSettings',
+            'curves_algorithm': 'curvesAlgorithm'
         }
 
-        self._robot_width = robot_width
-        self._robot_length = robot_length
-        self._headland_width = headland_width
-        self._sorter_algorithm = sorter_algorithm
+        self._robot_settings = robot_settings
+        self._sorter_settings = sorter_settings
+        self._curves_algorithm = curves_algorithm
 
     @classmethod
     def from_dict(cls, dikt) -> 'GeneratePathPostRequestSettings':
@@ -55,99 +54,72 @@ class GeneratePathPostRequestSettings(Model):
         return util.deserialize_model(dikt, cls)
 
     @property
-    def robot_width(self) -> float:
-        """Gets the robot_width of this GeneratePathPostRequestSettings.
+    def robot_settings(self) -> RobotSettings:
+        """Gets the robot_settings of this GeneratePathPostRequestSettings.
 
-        Width of the robot  # noqa: E501
 
-        :return: The robot_width of this GeneratePathPostRequestSettings.
-        :rtype: float
+        :return: The robot_settings of this GeneratePathPostRequestSettings.
+        :rtype: RobotSettings
         """
-        return self._robot_width
+        return self._robot_settings
 
-    @robot_width.setter
-    def robot_width(self, robot_width: float):
-        """Sets the robot_width of this GeneratePathPostRequestSettings.
+    @robot_settings.setter
+    def robot_settings(self, robot_settings: RobotSettings):
+        """Sets the robot_settings of this GeneratePathPostRequestSettings.
 
-        Width of the robot  # noqa: E501
 
-        :param robot_width: The robot_width of this GeneratePathPostRequestSettings.
-        :type robot_width: float
+        :param robot_settings: The robot_settings of this GeneratePathPostRequestSettings.
+        :type robot_settings: RobotSettings
         """
 
-        self._robot_width = robot_width
+        self._robot_settings = robot_settings
 
     @property
-    def robot_length(self) -> float:
-        """Gets the robot_length of this GeneratePathPostRequestSettings.
+    def sorter_settings(self) -> GeneratePathPostRequestSettingsSorterSettings:
+        """Gets the sorter_settings of this GeneratePathPostRequestSettings.
 
-        Length of the robot  # noqa: E501
 
-        :return: The robot_length of this GeneratePathPostRequestSettings.
-        :rtype: float
+        :return: The sorter_settings of this GeneratePathPostRequestSettings.
+        :rtype: GeneratePathPostRequestSettingsSorterSettings
         """
-        return self._robot_length
+        return self._sorter_settings
 
-    @robot_length.setter
-    def robot_length(self, robot_length: float):
-        """Sets the robot_length of this GeneratePathPostRequestSettings.
+    @sorter_settings.setter
+    def sorter_settings(self, sorter_settings: GeneratePathPostRequestSettingsSorterSettings):
+        """Sets the sorter_settings of this GeneratePathPostRequestSettings.
 
-        Length of the robot  # noqa: E501
 
-        :param robot_length: The robot_length of this GeneratePathPostRequestSettings.
-        :type robot_length: float
+        :param sorter_settings: The sorter_settings of this GeneratePathPostRequestSettings.
+        :type sorter_settings: GeneratePathPostRequestSettingsSorterSettings
         """
 
-        self._robot_length = robot_length
+        self._sorter_settings = sorter_settings
 
     @property
-    def headland_width(self) -> float:
-        """Gets the headland_width of this GeneratePathPostRequestSettings.
+    def curves_algorithm(self) -> str:
+        """Gets the curves_algorithm of this GeneratePathPostRequestSettings.
 
-        Width of the headland  # noqa: E501
+        Algorithm to generate curves  # noqa: E501
 
-        :return: The headland_width of this GeneratePathPostRequestSettings.
-        :rtype: float
-        """
-        return self._headland_width
-
-    @headland_width.setter
-    def headland_width(self, headland_width: float):
-        """Sets the headland_width of this GeneratePathPostRequestSettings.
-
-        Width of the headland  # noqa: E501
-
-        :param headland_width: The headland_width of this GeneratePathPostRequestSettings.
-        :type headland_width: float
-        """
-
-        self._headland_width = headland_width
-
-    @property
-    def sorter_algorithm(self) -> str:
-        """Gets the sorter_algorithm of this GeneratePathPostRequestSettings.
-
-        Algorithm to sort the swaths  # noqa: E501
-
-        :return: The sorter_algorithm of this GeneratePathPostRequestSettings.
+        :return: The curves_algorithm of this GeneratePathPostRequestSettings.
         :rtype: str
         """
-        return self._sorter_algorithm
+        return self._curves_algorithm
 
-    @sorter_algorithm.setter
-    def sorter_algorithm(self, sorter_algorithm: str):
-        """Sets the sorter_algorithm of this GeneratePathPostRequestSettings.
+    @curves_algorithm.setter
+    def curves_algorithm(self, curves_algorithm: str):
+        """Sets the curves_algorithm of this GeneratePathPostRequestSettings.
 
-        Algorithm to sort the swaths  # noqa: E501
+        Algorithm to generate curves  # noqa: E501
 
-        :param sorter_algorithm: The sorter_algorithm of this GeneratePathPostRequestSettings.
-        :type sorter_algorithm: str
+        :param curves_algorithm: The curves_algorithm of this GeneratePathPostRequestSettings.
+        :type curves_algorithm: str
         """
-        allowed_values = ["snake", "boustrophedon"]  # noqa: E501
-        if sorter_algorithm not in allowed_values:
+        allowed_values = ["dubins", "dubins_cc", "reeds_shepp"]  # noqa: E501
+        if curves_algorithm not in allowed_values:
             raise ValueError(
-                "Invalid value for `sorter_algorithm` ({0}), must be one of {1}"
-                .format(sorter_algorithm, allowed_values)
+                "Invalid value for `curves_algorithm` ({0}), must be one of {1}"
+                .format(curves_algorithm, allowed_values)
             )
 
-        self._sorter_algorithm = sorter_algorithm
+        self._curves_algorithm = curves_algorithm
